--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     text-shadow: 0 3px 10px rgba(0,0,0,0.2);
   }
 
+  .popup .author {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 16px;
+    color: #666;
+  }
+
   @keyframes fadeInOut {
     0% { opacity: 0; transform: scale(0.8); }
     10% { opacity: 1; transform: scale(1.05); }
@@ -36,7 +44,25 @@
     100% { opacity: 0; transform: scale(0.8); }
   }
 
-  /* 圆形浮窗按钮 */
+  #fullTip {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFEFD5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    font-weight: bold;
+    color: #333;
+    z-index: 10000;
+    text-align: center;
+    text-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    flex-direction: column;
+  }
+
   #musicControl {
     position: fixed;
     bottom: 40px;
@@ -51,7 +77,7 @@
     justify-content: center;
     cursor: pointer;
     user-select: none;
-    z-index: 9999;
+    z-index: 10001;
     font-size: 36px;
   }
 
@@ -65,8 +91,12 @@
 </head>
 <body>
 
+<!-- 启动全屏提示 -->
+<div id="fullTip"></div>
+
+<!-- 音乐浮窗 -->
 <div id="musicControl"><span>▶</span></div>
-<audio id="bgMusic" loop src="http://music.163.com/song/media/outer/url?id=2149612361.mp3" autoplay muted></audio>
+<audio id="bgMusic" loop src="http://music.163.com/song/media/outer/url?id=2149612361.mp3"></audio>
 
 <script>
 const messages = [
@@ -75,7 +105,7 @@ const messages = [
   "相信自己，勇敢前行。","温柔以待世界。","感受生活的美好。","今天也要加油哦！",
   "阳光总在风雨后。","遇见更好的自己。","心怀感恩，快乐常在。",
   "愿你被世界温柔以待。","梦想照进现实。","每一天都是新的开始。",
-  "保持热爱，奔赴山海。","生活因你而美丽。","愿你笑容常在。"
+  "保持热爱，奔赴山海。","生活因你而美丽。","愿你笑容常在。","青春没有极限。","我们的故事没有终点。","最好的朋友在身边。"
 ];
 
 const warmColors = [
@@ -86,14 +116,45 @@ const warmColors = [
 
 let count = 0;
 
-// 无限循环弹窗 + 背景渐变
+// 动态根据时间设置 fullTip 内容
+function setFullTipMessage() {
+  const now = new Date();
+  const hour = now.getHours();
+  const minute = now.getMinutes();
+  const fullTip = document.getElementById("fullTip");
+
+  let message = "";
+
+  if (hour >= 6 && (hour < 9 || (hour === 9 && minute <= 10))) {
+    message = "早上好 :)<br>--- 由此开启好心情❤️";
+  } else if (hour >= 9 && hour < 12) {
+    message = "上午好呀 :)<br>--- 元气满满每一天❤️";
+  } else if (hour >= 12 && hour < 14) {
+    message = "中午好呀 :)<br>--- 记得午休一下哦❤️";
+  } else if (hour >= 14 && hour < 18) {
+    message = "下午好 :)<br>--- 阳光正好加油呀❤️";
+  } else if (hour >= 18 && hour < 22) {
+    message = "晚上好 :)<br>--- 愿你被星光温柔以待❤️";
+  } else {
+    message = "夜深了 :)<br>--- 好梦伴你入眠❤️";
+  }
+
+  fullTip.innerHTML = message;
+}
+
+// 循环弹窗
 function showPopup() {
   const popup = document.createElement('div');
   popup.className = 'popup';
   popup.textContent = messages[count % messages.length];
+
+  const author = document.createElement('div');
+  author.className = 'author';
+  author.textContent = 'by Yuboy';
+  popup.appendChild(author);
+
   const bgColor = warmColors[count % warmColors.length];
   popup.style.backgroundColor = bgColor;
-
   document.body.style.backgroundColor = bgColor;
 
   const x = Math.random() * (window.innerWidth - 600);
@@ -107,32 +168,32 @@ function showPopup() {
   count++;
   setTimeout(showPopup, 100);
 }
-showPopup();
 
-// 背景音乐控制
+// 音乐控制 & 启动逻辑
 const bgMusic = document.getElementById('bgMusic');
 const musicControl = document.getElementById('musicControl');
 const icon = musicControl.querySelector('span');
 let isPlaying = false;
 
-// 首次点击解除静音并尝试播放
-function initMusic() {
-  bgMusic.muted = false;
-  bgMusic.play().catch(()=>{});
-  document.body.removeEventListener('click', initMusic);
-}
-document.body.addEventListener('click', initMusic);
+setFullTipMessage(); // 初始化全屏提示
 
-// 控制按钮点击
 musicControl.addEventListener('click', () => {
-  if(isPlaying){
+  if(!isPlaying){
+    bgMusic.play().catch(()=>{});
+    icon.textContent = '⏸';
+    isPlaying = true;
+
+    const fullTip = document.getElementById('fullTip');
+    fullTip.style.transition = 'opacity 1.5s ease';
+    fullTip.style.opacity = 0;
+    setTimeout(() => fullTip.remove(), 1500);
+
+    setTimeout(showPopup, 1500);
+  } else {
     bgMusic.pause();
     icon.textContent = '▶';
-  }else{
-    bgMusic.play();
-    icon.textContent = '⏸';
+    isPlaying = false;
   }
-  isPlaying = !isPlaying;
 });
 
 // 可拖拽浮窗
